[package]
name = "anycomplete"
version = "0.1.0"
authors = ["Edwin Sundberg <edwin@edthing.com>"]
edition = "2018"

[dependencies]
win-screenshot = "3.0.1"
active-win-pos-rs = "0.7"
winapi = "0.3.9"
regex = "1.7.1"
image = "0.24.5"
leptess = "0.14.0"
reqwest = "0.11.15"
directories = "5.0"
chat-gpt-rs = "1.2.0"
windows = "0.46.0"
tempfile = "3.4.0"
hotkey = "0.3.1"
tokio = "1.21.1"
enigo = {git = "https://github.com/enigo-rs/enigo.git", version = "0.0.14"}
dotenv = "0.15.0"